[package]
name = "static-from-exif"
version = "0.1.0"
authors = ["Jason Abbott <you@example.com>"]
edition = "2018"

[dependencies]
encoding = "0.2"
kamadak-exif = "0.5"
hashbrown = "0.7"
lazy_static = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yarte = "0.7"