[package]
name = "static-from-exif"
version = "0.1.0"
authors = ["Jason Abbott <you@example.com>"]
edition = "2018"

[dependencies]
colored = "1.9"
encoding = "0.2"
kamadak-exif = "0.5"
hashbrown = { version = "0.7", features = ["serde"] }
html5ever = "0.25"
markup5ever_rcdom ="0.1"
lazy_static = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.5"
ron = "0.5.1"
regex = { version = "1" } #, features = ["pattern"] }
reqwest = { version = "0.10.4", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.4"
url = "2"
yarte = "0.8"
enum-primitive-derive = "^0.1"
num-traits = "^0.2"